# icon-generator-prototype

./: README.MD  icon.generator.prototype.json  meson.build  test.txt  unsaved file 1
data/: icon.generator.prototype.appdata.xml.in  icon.generator.prototype.desktop.in  icon.generator.prototype.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: icon_generator_prototype-application.c  icon_generator_prototype-application.h  icon_generator_prototype-window.c  icon_generator_prototype-window.h  icon_generator_prototype-window.ui  icon_generator_prototype.gresource.xml  main.c  meson.build
